plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
}

version '1.0-SNAPSHOT'
project.buildDir = '/build'

sourceSets {
    main {
        java {
            srcDir 'src/'
        }
        resources {
            srcDirs = ['resources/', 'src-js/']
        }
    }
    test {
        java {
            srcDir 'src-test/'
        }
        resources {
            srcDirs = ['test-resources/', 'benchmarks/']
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // Logging
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '2.14.0'
    //implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
    //implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'


    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // Utils
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'

    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.6.0.201912101111-r'
    implementation group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'

    // For Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}
